--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
       </div>
     </main>
     <script src="p5.js"></script>
+    <script src="tile.js"></script>
     <script src="chroma.min.js"></script>
     <script src="tools.js"></script>
     <script src="color.js"></script>
